# myca

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  compile_flags.txt  gdb_pretty_printers.py  project.vim
examples/: alloc.myca  basic.myca  generics.myca  integer_type_deduction.myca  option.myca  option_result.myca  parser.myca  raylib.myca  result.myca  sum_types.myca  union_types.myca
exploration/: alloc.myca  basic.myca  error_context.myca  generics.myca  integer_type_deduction.myca  member_procs.myca  option.myca  raylib.myca  result.myca  specialization.myca  todo.myca  try.myca
src/: codegen.cpp  codegen.hpp  main.cpp  semantics.cpp  semantics.hpp  syntax.cpp  syntax.hpp  utils.hpp
src/codegen/: c_backend.cpp  c_backend.hpp
src/semantics/: ast_operations.cpp  ast_operations.hpp  ast_traversal.hpp  constraint_solver.cpp  constraint_solver.hpp  context.cpp  context.hpp  error.hpp  instance_registry.cpp  instance_registry.hpp  module.cpp  module.hpp  pass__default_value_checking.cpp  pass__layout_computation.cpp  pass__name_registration.cpp  pass__name_resolution.cpp  pass__typechecking.cpp  passes.cpp  passes.hpp  substitution.cpp  substitution.hpp  type_env.cpp  type_env.hpp  type_properties.cpp  type_properties.hpp  unification.cpp  unification.hpp  well_formed_term_set.cpp  well_formed_term_set.hpp
src/syntax/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
tests/: runner.py  unit.cpp
tests/alias_recursive_def/: main.myca
tests/casting_and_type_hinting/: expected_parser_output.txt  main.myca
tests/common_type_ambiguous_implicit_ctor/: expected_compilation_error.txt  main.myca
tests/common_type_ambiguous_struct_union/: expected_compilation_error.txt
tests/common_type_struct_1/: expected_parser_output.txt
tests/common_type_struct_4/: expected_parser_output.txt
tests/common_type_union/: expected_parser_output.txt
tests/default_value_expr_after_main/: main.myca
tests/default_value_expr_cyclic/: main.myca
tests/default_value_expr_not_cyclic/: main.myca
tests/deref_many_element_pointer/: main.myca
tests/example_array/: main.myca
tests/example_list/: main.myca
tests/example_safe_div/: main.myca
tests/example_safe_div_result/: expected_parser_output.txt  main.myca
tests/implicit_case_nested/: main.myca
tests/index_single_element_pointer/: main.myca
tests/integer_type_deduction/: expected_parser_output.txt  main.myca
tests/integer_type_deduction_invalid/: expected_compilation_error.txt  main.myca
tests/integration/: array_count_invalid.myca  ref_params.myca  runner.cpp  runner.py
tests/integration/arithmetic_invalid_types/: expected_compilation_error.txt  main.myca
tests/integration/array_conversion_invalid/: expected_compilation_error.txt  main.myca
tests/integration/array_copy_by_value/: expected_parser_output.txt  main.myca
tests/integration/array_count_invalid/: main.myca
tests/integration/array_count_invalid_01/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_02/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_03/: expected_compilation_error.txt
tests/integration/array_count_invalid_05/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_06/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_07/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_08/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_09/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_1/: expected_compilation_error.txt
tests/integration/array_count_invalid_10/: expected_compilation_error.txt  main.myca
tests/integration/array_count_invalid_11/: expected_compilation_error.txt  main.myca
tests/pointer_many_element_deref/: expected_compilation_error.txt
tests/struct_recursive_def/: main.myca
tests/struct_recursive_type_param_1/: expected_compilation_error.txt
tests/struct_recursive_type_param_2/: expected_compilation_error.txt  main.myca
tests/struct_recursive_type_param_4/: main.myca
tests/type_deduction_var_pointers_and_structs/: main.myca
tests/type_deduction_var_unconstrained_in_default_value_expr/: expected_compilation_error.txt  main.myca
tests/union_ambiguous_int/: expected_compilation_error.txt  main.myca
tests/union_init_with_conversion/: main.myca
tests/union_set_like/: main.myca
tests/union_simple/: main.myca
tests/union_struct_inline_def/: main.myca
tests/union_struct_inline_def_invalid/: expected_compilation_error.txt  main.myca
tests/union_with_type_var_invalid/: expected_compilation_error.txt  main.myca
tests/unit/: runner.cpp  runner.hpp  test_comments.cpp  test_constraints.cpp
(+113 files in other folders)
